@@ -236,13 +236,13 @@ proc qmaster_spooling_ar_restart {} {
       set check_values(start_time)                     "$starto"
       set check_values(end_time)                       "$endo"
       set check_values(duration)                       "01:01:01"
-      set check_values(group)                          "staff"
+      # disabled because does not work on all architectures, sometimes it's wheel sometimes staff
+      # set check_values(group)                          "staff"
       set check_values(account)                        "test_ar_account"
       set check_values(resource_list)                  "h_rt=200, hostname=${actual_host}"
       set check_values(error_handling)                 "true"
-      set check_values(granted_slots_list)             "$qinstance=1"
+      set check_values(granted_slots_list)             "$qinstance=5"
       set check_values(granted_parallel_environment)   "mytestpe slots 1-9999999"
-      set check_values(checkpoint_name)                "test_ar_ckpt"
       set check_values(mail_options)                   "abe"
       set check_values(mail_list)                      "$CHECK_FIRST_FOREIGN_SYSTEM_USER@sun.com,$CHECK_SECOND_FOREIGN_SYSTEM_USER@sun.com"
       set check_values(acl_list)                       "$CHECK_SECOND_FOREIGN_SYSTEM_USER"
